--- a/SLAM/非线性优化.md
+++ b/SLAM/非线性优化.md
@@ -1,6 +1,6 @@
 # 非线性优化
 
-在SLAM 中，由于噪声的影响，观测方程和运动方程都只能近似成立。但在整个过程中，会有很多多余观测，即一个特征会被机器人在不同位置、不同时间进行观测，每次也都会观测到多个特征，这就形成了约束。利用这些约束，就可以对数据进行优化。
+在SLAM 中，由于噪声的影响，观测方程和运动方程都只能近似成立。但在整个过程中，会有很多多余观测，即一个特征会被机器人在不同位置、不同时间进行观测，机器人每次也都会观测到多个特征，这就形成了约束。利用这些约束，就可以对数据进行优化。
 
 ## 状态估计问题
 
@@ -25,7 +25,7 @@ s 为路标$\mathbf{z}_j$ 在对应相机坐标系下的深度。这里我们使
 $$
 \omega_k \sim N(0, \mathbf{R}_k),\ \mathbf{v}_k\sim N(0,\mathbf{Q}_{k, j})
 $$
-在这些噪声的影响下，我们希望通过带噪声的数据**z** 和**u** 来推断位姿**x** 和地图**y**，这就构成了一个状态估计问题。常用的方法有滤波器和非线性优化。滤波器会在后面结束，这里重点介绍非线性优化的方法。
+在这些噪声的影响下，我们希望通过带噪声的数据**z** 和**u** 来推断位姿**x** 和地图**y**，这就构成了一个状态估计问题。常用的方法有滤波器和非线性优化。滤波器会在后续章节中介绍，这里重点介绍非线性优化的方法。
 
 ### 最大后验和最大似然
 
@@ -67,7 +67,7 @@ $$
 $$
 P(\mathbf{z}_{j,k}|\mathbf{x}_k,\mathbf{y}_j) = N(h(\mathbf{y}_j,\mathbf{x}_k), \mathbf{Q}_{k, j}))
 $$
-即为均值为$h(\mathbf{y}_j,\mathbf{x}_k)$ 的高斯分布。为了计算使它最大化的$\mathbf{x}_k,\mathbf{y}_j$，可以使用**最小化负对数**的方法。
+即均值为$h(\mathbf{y}_j,\mathbf{x}_k)$ 的高斯分布。为了计算使它最大化的$\mathbf{x}_k,\mathbf{y}_j$，可以使用**最小化负对数**的方法。
 
 考虑任意维的高斯分布$\mathbf{x}_k\sim N(\mu,\mathbf{\Sigma})$ (这里**x** 不表示位姿)，它的概率密度函数为：
 $$
@@ -79,9 +79,9 @@ $$
 $$
 求原分布的最大化显然就是求其负对数的**最小化**。而上式第一项和**x** 无关，所以只需要最小化右侧的二次型项。将之代入SLAM 的观测模型可得：
 $$
-\mathbf(x)^*_{MLE}=\arg\min (\mathbf{z}_{k,j}-h(\mathbf{y}_j,\mathbf{x}_k))^T\mathbf{\Sigma}^{-1}(\mathbf{z}_{k,j}-h(\mathbf{y}_j,\mathbf{x}_k))
+\mathbf{x}^*_{MLE}=\arg\min (\mathbf{z}_{k,j}-h(\mathbf{y}_j,\mathbf{x}_k))^T\mathbf{\Sigma}^{-1}(\mathbf{z}_{k,j}-h(\mathbf{y}_j,\mathbf{x}_k))
 $$
-该式就相当于**最小化噪声项的平方**。
+该式就相当于**最小化噪声项的平方和**。
 
 对运动方程和观测方程，定义数据和估计值之间的误差为：
 $$
@@ -98,7 +98,7 @@ $$
 
 ### 非线性最小二乘
 
-式(17) 比较复杂，作为基础理论的介绍，我们先考虑一个类似的、简单的非线性最小二乘问题。目标函数为：
+式(17) 比较复杂，作为基础理论的介绍，我们先考虑一个类似的、简单的非线性最小二乘问题。假设目标函数为：
 $$
 \min_x \frac{1}{2}||f(x)||^2_2
 $$
@@ -130,11 +130,11 @@ $$
 $$
 \mathbf{x} = (\mathbf{A}^T\mathbf{A})^{-1}\mathbf{A}^T\mathbf{y}
 $$
-最后，虽然在上一讲中我们引入了李代数和它的导数形式，但这不意味着我们就可以顺利地用它们来求出解析解。其次，从前面的介绍我们看到问题是非线性的，而且数据量可能很大，也不适合上面这个推导和用法方程来解。类比机器学习中的梯度下降法，我们可以采用**迭代**的方法。从一个**初始值**出发，不断地更新当前的优化变量使得目标函数下降。其步骤如下：
+最后，虽然在上一讲中我们引入了李代数和它的导数形式，但这不意味着我们就可以顺利地用它们来求出解析解。其次，从前面的介绍我们看到问题是非线性的，而且数据量可能很大，也不适合上面这个推导和用法方程来解。类比机器学习中的梯度下降法，我们可以采用**迭代**的方法。从一个**初始值**出发，不断地**更新**当前的优化变量使得目标函数下降。其步骤如下：
 
 > 1. 给定某个初始值$\mathbf{x}_0$；
-> 2. 对于第k 次迭代，寻找一个增量$\Delta \mathbf{x}_k$，使得$||f(\mathbf{x}_k+\Delta\mathbf{x}_k| |$ 达到极小值；
-> 3. 若$\Delta \mathbf{x}_k$ 足够下则停止迭代；
+> 2. 对于第k 次迭代，寻找一个增量$\Delta \mathbf{x}_k$，使得$||f(\mathbf{x}_k+\Delta\mathbf{x}_k)| |^2_2$ 达到极小值；
+> 3. 若$\Delta \mathbf{x}_k$ 足够小则停止迭代；
 > 4. 否则，令$\mathbf{x}_{k+1}=\mathbf{x}_k + \Delta \mathbf{x}_k$.
 
 这就让求解导数为零的问题变成了一个不断寻找梯度并下降的过程。我们只要找到迭代点的梯度方向即可，而不必寻找全局导数为0 的情况。
@@ -155,7 +155,7 @@ $$
 $$
 \Delta \mathbf{x}^*=-\mathbf{J}^T(\mathbf{x})
 $$
-上式的意义也很直观：沿着与梯度方向相反的方向前进即可。通常我们会在该方向上加上一个步长$\lambda$，求得最快的下降方式。该方法被称为**最速下降法**。
+上式的意义也很直观：沿着与梯度方向相反的方向前进即可。通常我们会在该方向上加上一个**步长**$\lambda$，求得最快的下降方式。该方法被称为**最速下降法**。
 
 如果保留二阶梯度，那么增量方程就变成：
 $$
@@ -163,9 +163,11 @@ $$
 $$
 将等式右边对$\Delta \mathbf{x}$ 求导并等于0 即可得：
 $$
-\mathbf{H}\Delta \mathbf{x}=-\mathbf{J}^T
+  \mathbf{H}\Delta \mathbf{x}=-\mathbf{J}^T
 $$
-该方法又称为牛顿法。但这个方法的问题在于需要计算海塞矩阵**H**。基于这节的讨论，下面介绍两种在实践中常用的方法：高斯牛顿法和列文播格 - 马夸尔特法。
+该方法又称为牛顿法。但这个方法的问题在于需要计算海塞矩阵**H**，这是我们想要避免的。
+
+基于这节的讨论，下面介绍两种在实践中常用的方法：高斯牛顿法和列文伯格 - 马夸尔特法。
 
 ## 非线性优化
 
@@ -177,7 +179,7 @@ f(\mathbf{x}+\Delta \mathbf{x})\approx f(\mathbf{x})+\mathbf{J}(\mathbf{x})\Delt
 $$
 回顾一下，我们的目标是寻找$\Delta \mathbf{x}$ 使得$||f(\mathbf{x}+\Delta \mathbf{x})||^2_2$ 最小。这里我们将函数替换成它的一阶泰勒展开，未知量也变成了$\Delta \mathbf{x}$。则目标函数就变成了关于$\Delta \mathbf{x}$ 的一个线性方程：
 $$
-\Delta \mathbf{x}^*=\arg\min \frac{1}{2}||f(\mathbf{x})+\mathbf{J}\Delta \mathbf{x}||^2
+  \Delta \mathbf{x}^*=\arg\min \frac{1}{2}||f(\mathbf{x})+\mathbf{J}\Delta \mathbf{x}||^2
 $$
 再说一遍，此时$f(\mathbf{x})$ 是由给定的泰勒展开初始值计算出的已知值。类似于上一小节讲的法方程方法，将式(31) 展开并对$\Delta \mathbf{x}$ 求导，令导数为0 即可得：
 $$
@@ -195,13 +197,13 @@ $$
 > 4. 若$\Delta \mathbf{x}_k$ 足够下则停止迭代；
 > 5. 否则，令$\mathbf{x}_{k+1}=\mathbf{x}_k + \Delta \mathbf{x}_k$，继续第2 步。
 
-从算法步骤可以看出，求解增量方程是最重要的。原则上，它要求$\mathbf{J}^T\mathbf{J}$ 是可逆（并且是正定）的。但实际中，计算所得的$\mathbf{J}^T\mathbf{J}$ 常常是半正定的。因此，在高斯牛顿法中，可能出现$\mathbf{J}^T\mathbf{J}$ 是奇异阵或者病态的情况。此时求的$\Delta\mathbf{x}$ 不稳定，算法可能不收敛。就算**H** 满足要求，回想泰勒展开的一个隐含前提是：近视只在$\mathbf{x}_k$ 附近有效。如果我们求得的步长$\Delta\mathbf{x}$ 太大，也会使得近似不够准确。
+从算法步骤可以看出，求解增量方程是最重要的。原则上，它要求$\mathbf{J}^T\mathbf{J}$ 是可逆（并且是正定）的。但实际中，计算所得的$\mathbf{J}^T\mathbf{J}$ 常常是半正定的。因此，在高斯牛顿法中，可能出现$\mathbf{J}^T\mathbf{J}$ 是奇异阵或者病态的情况。此时求的$\Delta\mathbf{x}$ 不稳定，算法可能不收敛。就算**H** 满足要求，回想泰勒展开的一个隐含前提是：近似只在$\mathbf{x}_k$ 附近有效。如果我们求得的步长$\Delta\mathbf{x}$ 太大，也会使得近似不够准确。
 
 ### 列文伯格 - 马夸尔特法
 
 泰勒展开只在展开点附近有较好的近似效果，而在高斯牛顿法并没有对这个“附近”有明确的定义。那么很自然地，我们就想给$\Delta \mathbf{x}$ 定义一个范围，限制它的大小。这个范围就叫做**信赖区域** (trust region)，这类方法就叫*信赖区域法*。在信赖区域内，我们认为近似是有效的；在信赖区域外则近似会出现问题。
 
-那问题就变成了*如何确定信赖区域*。一个比较直观也比较好的方法就是依据近似模型和实际函数之间的差异来确定：如果二者之间的差异较小，说明近似地还不错，那么信赖区域就可以大一些。如果二者间的差异大，就让信赖区域小一些。
+那问题就变成了**如何确定信赖区域**。一个比较直观也比较好的方法就是依据近似模型和实际函数之间的差异来确定：如果二者之间的差异较小，说明近似地还不错，那么信赖区域就可以大一些。如果二者间的差异大，就让信赖区域小一些。
 
 考虑使用
 $$
@@ -209,7 +211,7 @@ $$
 $$
 来判断泰勒展开是否较好地近似了原模型。上式的分子是函数实际下降的数值，而分母是用来近似的泰勒展开下降的值。
 
-*如果$\rho$ 接近1，则近似是好的；如果$\rho$ 比较小，说明实际减小的数值远小于近似出来的值，说明近似得不好，需要缩小信赖区域；如果$\rho$ 比较大，说明实际下降的值大于近似值，可以放宽信赖区域。*
+*如果$\rho$ 接近1，则近似是好的；如果$\rho$ 比较小，说明实际减小的数值远小于近似出来的值，说近则得不好，需要缩小信赖区域；如果$\rho$ 比较大，说明实际下降的值大于近似值，可以放宽信赖区域。*
 
 因此，列文伯格 - 马夸尔特法的算法步骤如下：
 
@@ -222,7 +224,7 @@ $$
 >
 > 3. 计算$\rho$；
 >
-> 4. 若$\rho >\frac{3}{4}$, 则$\mu=2\mu$; 若$\rho<\frac{1}{4}$, 则$\mu = 0.4\mu$;
+> 4. 若$\rho >\frac{3}{4}$, 则$\mu=2\mu$; 若$\rho<\frac{1}{4}$, 则$\mu = 0.5\mu$;
 >
 > 5. 若$\rho$ 大于阈值，则近似可行，$\mathbf{x}_{k+1}=\mathbf{x}_k+\Delta \mathbf{x}_k$;
 >
@@ -238,7 +240,7 @@ $$
 $$
 (\mathbf{H}+\lambda\mathbf{D}^T\mathbf{D})\Delta \mathbf{x}_k=\mathbf{g}
 $$
-可以看到，与高斯牛顿法相比，多了一项正则化项$\lambda\mathbf{D}^T\mathbf{D}$，首先是在一定程度上避免了线性方程组的系数矩阵的非奇异和病态问题，提供更稳定、准确的增量$\Delta \mathbf{x}_k$. 
+可以看到，与高斯牛顿法相比，多了一项正则化项$\lambda\mathbf{D}^T\mathbf{D}$，它一定程度上避免了线性方程组的系数矩阵的非奇异和病态问题，提供更稳定、准确的增量$\Delta \mathbf{x}_k$. 
 
 以较为简单的列文伯格法为例，**D** 为单位矩阵。当参数$\lambda$ 较小的时候，此时矩阵**H** 占据主导地位，说明二次近似模型在该范围内是比较好的，此时列文伯格 - 马夸尔特法接近高斯牛顿法；如果$\lambda$ 比较大，则$\lambda\mathbf{I}$ 是主要的，说明二次近似不够好，列文伯格 - 马夸尔特法接近一阶梯度下降法。
 
@@ -257,12 +259,12 @@ $$
 
 ## 图优化理论简介
 
-我们已经介绍了非线性最小二乘及其求解方法。非线性最小二乘是由许许多多的误差项的平方和组成的。但仅仅看这一组优化变量及其误差我们并不清楚它们的**关联**。譬如，优化变量$\mathbf{x}_j$ 会影响多少个误差项，某个误差项又联系着哪些优化变量呢？我们希望能够直观地看到优化问题**长什么样**。
+我们已经介绍了非线性最小二乘及其求解方法。非线性最小二乘是由许许多多的误差项的平方和组成的。但仅仅看这一组优化变量及其误差我们并不清楚它们的**关系**。譬如，优化变量$\mathbf{x}_j$ 会影响多少个误差项，某个误差项又联系着哪些优化变量呢？我们希望能够直观地看到优化问题**长什么样**。
 
 图优化就是把优化问题表现成**图** (Graph) 的一种方式。*图* 是一种数据结构，这里就不引入了。在图优化中，用**顶点** (vertex) 表示**优化变量**，用**边** (edge) 表示**误差项**。于是，对于任意一个上述形式的非线性最小二乘问题，都可以构建一个与之对应的图。
 
 我们用三角形表示相机，圆表示路标，它们共同构成了图优化的顶点；用实线表示相机的运动模型，用虚线表示观测模型，它们构成了图优化的边。则图就表示成：
 
-![1](../../../Downloads/1.png)
+![1](1.png)
 
 有了直观的表示，我们就可以进行更多的操作了。比如，可以**去掉孤立的顶点**或者**先优化边数多（度数大）的顶点**。最基本的图优化是用图来表达一个非线性最小二乘的优化问题，而我们可以利用**图的性质**来做**更好的优化**。
