--- a/SLAM/相机与图像.md
+++ b/SLAM/相机与图像.md
@@ -96,3 +96,96 @@ $$
 ![屏幕快照 2018-02-04 17.27.34](/Users/lipenghua/Downloads/屏幕快照 2018-02-04 17.27.34.png)
 
 可以看大，桶形畸变是由图像的放大率随着光轴之间的距离增加而减小；枕形畸变则相反。它们是径向畸变，因此穿过图像中心和光轴有交点的直线能保持形状不变。
+
+而第二种原因引入的畸变称为切向畸变，并不存在对称性质。
+
+前面说过，假设某一点P的归一化表示为[x, y]^T^。也可以用极坐标来表示它，写作$[r,\theta]$. 径向畸变可以看作是坐标点沿着长度方向发生了变化$\delta r$，也就是其距离原点的长度发生了变化；切向畸变可以看成是坐标点沿着切线方向发生了变化，也就是水平夹角变化了$\delta\theta$。
+
+对于径向畸变，由于它们都是随着与中心之间的距离增加而增加，因此可以用一个多项式函数来描述畸变前后的坐标变化：
+$$
+x_{distorted} = x(1 + k_1 r^2 + k_2 r^4 + k_3 r^6) \\
+y_{distorted} = y(1 + k_1 r^2 + k_2 r^4 + k_3 r^6)
+$$
+在上式中，对于畸变较小的图像中心区域，畸变纠正主要是k~1~ 起作用；对于畸变较大的边缘区域，主要是k~2~ 起作用。根据所用镜头，可以适当使用合适的校正系数。
+
+对于切向畸变，可以使用另外的两个参数p~1~, p~2~ 来进行纠正：
+$$
+x_{distorted} =  x + 2p_1 x y + p_2(r^2 + 2x^2) \\
+y_{distorted} = y + p_1(r^2 + 2y^2) + 2p_2 x y
+$$
+联合上面两个式子，对于相机坐标系中的一点P [X, Y, Z]，找到其对应像点的像素坐标的过程可以描述为：
+
+1. 将三维空间点投影到归一化图像平面。设它的归一化坐标为[x, y]^T^;
+
+2. 进行畸变矫正：
+   $$
+   x_{distorted} = x(1 + k_1 r^2 + k_2 r^4 + k_3 r^6) + 2p_1 x y + p_2(r^2 + 2x^2) \\
+   y_{distorted} = y(1 + k_1 r^2 + k_2 r^4 + k_3 r^6) + p_1(r^2 + 2y^2) + 2p_2 x y
+   $$
+   ​
+
+3. 通过相机的内参数，利用纠正后的点求的该点的像素坐标：
+   $$
+   u=f_x\cdot x_{distorted} + c_x \\
+   v=f_y\cdot y_{distorted} + c_y
+   $$
+
+
+### 双目相机模型
+
+针孔相机模型描述了单个相机的成像过程。但仅有一张相片是不足以确定对应空间点的具体位置的。考虑相机光心O 和像点p，二者的连线在物方空间是一条射线，这条射线上的所有点都可能投影到这个像点上。只有当P的深度确定时，才能确定它的空间位置。
+
+确定深度的方法有很多种，人眼就是一个典型的双目相机模型：通过左右眼看到的景物的差异（称为**视察**）来判断物体与我们之间的距离。利用双目相机，**同时**采集左右相机的图像，计算图像间的时差，以此估计每一个像素的深度。
+
+![image1](../../../../../Downloads/image1.png)
+
+双目相机一般由左右两个相机组成，可以把两者都看作是针孔相机。左右相机间的距离称为**基线**（一般二者严格平行，距离固定）。
+
+考虑一个空间点P，它在左右相机上的像点分别为P~l~, P~r~。在理想情况下，这两个像的位置的差异只出现在x 轴上（因为左右相机严格平行，只在x 轴上有差异）。记左右像点的x 轴上的像素坐标分别为u~L~, u~R~。根据下图所示的相似三角形有：
+
+![屏幕快照 2018-02-04 20.51.57](../../../../../Downloads/屏幕快照 2018-02-04 20.51.57.png)
+$$
+\frac{z-f}{z}=\frac{b-u_L-u_R}{b}
+$$
+设$d=u_L-u_R$ 为左右像点的横坐标之差，称为**视差**。根据上市则有：
+$$
+z=\frac{fb}{d}
+$$
+可以看到，时差与距离成反比。时差越大，距离越近。而且，基线d 确定了双目相机能确定的深度的最大值。基线越长，能测得的距离就越远。
+
+### RGB-D 相机模型
+
+RGB-D 相机可以**主动**测量每个像素的深度。目前的RGB-D 相机按原理可以分为两大类：
+
+1. 通过**红外结构光** 来测量像素深度，如Kinect 1;
+2. 通过**飞行时间** (time-of-flight) 来测量像素深度，如Kinect 2.
+
+测量了深度后，RGB-D 相机通常按照（生产时就确定好的）相机摆放位置，**自动**完成深度图和彩色图之间的配对工作，输出**一一对应**的彩色图和深度图。如此，我们就可以在两张影像上的**同一个像素位置**读取到色彩信息和深度信息，计算像素的三维坐标。
+
+## 图像
+
+在计算机中，图像是一个二维数组/ 矩阵。以最简单的灰度图为例，每个**像素位置**(x, y) 对应一个灰度值I。则一个宽为w 高为h 的图像可以表示为：
+$$
+\mathbf{I}(x, y)\in R^{w\times h}
+$$
+由于存储空间和数值精度的限制，我们无法表达出所有色彩。常用0 - 255 的整数（即一个字节）来表达图像的灰度强度。则一张宽640 高480 **像素分辨率**的灰度图就表示为：
+
+```c++
+unsigned char image[480][640]
+```
+
+注意到**高度**为图像的**行数**而**宽度**则为**列数**。而计算机中第一个下标为数组的行，第二个下标为数组的列。表示为：
+
+![屏幕快照 2018-02-04 21.15.20](../../../../../Downloads/屏幕快照 2018-02-04 21.15.20.png)
+
+注意到这里y 轴是行而x 轴是列。所以如果我们想访问像素坐标为 (x, y) 的像素，则应写为：
+
+```c++
+unsigned char pixel = image[y][x]
+```
+
+请读者注意这里x 和y 的顺序。这是很多程序错误的原因。
+
+彩色图像由于在一个位置上同时有RGB 分别对应的像素强度，所以引入了**通道** (channel) 的概念。对于每一个像素，用三个通道分别保留其R、G、B 上的像素值。和灰度图一样，每个通道一般也是一个字节（8位），彩色图的一个像素需要24 位存储空间。
+
+对于RGB-D 相机产生的深度图，距离单位一般为毫米，8 位存储空间只能表示0.255 米，显然是不够的。一般采用16位整数来记录深度图的信息。16位整数能表示0 - 65535 之间的数值，最大值大概为65米。从这里我们也可以看出，RGB-D 相机不能表示大范围的距离信息。
