--- a/SLAM/相机与图像.md
+++ b/SLAM/相机与图像.md
@@ -10,7 +10,7 @@
 
 初中物理里都会有一个小孔成像的实验，这个小孔成像的模型可以看作是针孔相机模型的基础。
 
-![屏幕快照 2018-02-04 15.14.17](/Users/lipenghua/Downloads/屏幕快照 2018-02-04 15.14.17.png)
+![屏幕快照 2018-02-04 15.14.17](屏幕快照 2018-02-04 15.14.17.png)
 
 这里盗图一张，来自高博的《视觉slam十四讲》
 
@@ -80,7 +80,7 @@ X \\ Y \\ Z
 $$
 此时，**P~c~** 可以看成是一个二维的齐次坐标，称为**归一化坐标**。它可以看成是位于相机前方z = 1 处的平面上，该平面称为**归一化平面**。P~c~ 经过相机内参后就得到了像素坐标，所以可以**把像素坐标[u, v]^T^ 看成是归一化平面上的点进行量化测量**的结果。
 
-![屏幕快照 2018-02-04 17.26.41](/Users/lipenghua/Downloads/屏幕快照 2018-02-04 17.26.41.png)
+![屏幕快照 2018-02-04 17.26.41](屏幕快照 2018-02-04 17.26.41.png)
 
 这一小节我们介绍了相机模型和各个坐标系的转换关系。其中涉及了世界坐标系，相机坐标系，归一化坐标，像平面坐标系和像素坐标系。要注意它们之间的区别和两两之间的转换关系。
 
@@ -93,7 +93,7 @@ $$
 
 第一种原因引起的畸变称为**径向畸变**。因为在实际的加工过程中，透镜一般是**中心对称**的，这就使得这种畸变通常也是径向对称。它主要分为两大类：**桶形畸变**和**枕形畸变**。
 
-![屏幕快照 2018-02-04 17.27.34](/Users/lipenghua/Downloads/屏幕快照 2018-02-04 17.27.34.png)
+![屏幕快照 2018-02-04 17.27.34](屏幕快照 2018-02-04 17.27.34.png)
 
 可以看大，桶形畸变是由图像的放大率随着光轴之间的距离增加而减小；枕形畸变则相反。它们是径向畸变，因此穿过图像中心和光轴有交点的直线能保持形状不变。
 
@@ -137,13 +137,13 @@ $$
 
 确定深度的方法有很多种，人眼就是一个典型的双目相机模型：通过左右眼看到的景物的差异（称为**视察**）来判断物体与我们之间的距离。利用双目相机，**同时**采集左右相机的图像，计算图像间的时差，以此估计每一个像素的深度。
 
-![image1](../../../../../Downloads/image1.png)
+![image1](image1.png)
 
 双目相机一般由左右两个相机组成，可以把两者都看作是针孔相机。左右相机间的距离称为**基线**（一般二者严格平行，距离固定）。
 
 考虑一个空间点P，它在左右相机上的像点分别为P~l~, P~r~。在理想情况下，这两个像的位置的差异只出现在x 轴上（因为左右相机严格平行，只在x 轴上有差异）。记左右像点的x 轴上的像素坐标分别为u~L~, u~R~。根据下图所示的相似三角形有：
 
-![屏幕快照 2018-02-04 20.51.57](../../../../../Downloads/屏幕快照 2018-02-04 20.51.57.png)
+![屏幕快照 2018-02-04 20.51.57](屏幕快照 2018-02-04 20.51.57.png)
 $$
 \frac{z-f}{z}=\frac{b-u_L-u_R}{b}
 $$
@@ -176,7 +176,7 @@ unsigned char image[480][640]
 
 注意到**高度**为图像的**行数**而**宽度**则为**列数**。而计算机中第一个下标为数组的行，第二个下标为数组的列。表示为：
 
-![屏幕快照 2018-02-04 21.15.20](../../../../../Downloads/屏幕快照 2018-02-04 21.15.20.png)
+![屏幕快照 2018-02-04 21.15.20](屏幕快照 2018-02-04 21.15.20.png)
 
 注意到这里y 轴是行而x 轴是列。所以如果我们想访问像素坐标为 (x, y) 的像素，则应写为：
 
