--- a/SLAM/非线性优化.md
+++ b/SLAM/非线性优化.md
@@ -1,6 +1,6 @@
 # 非线性优化
 
-在SLAM 中，由于噪声的影响，观测方程和运动方程都只能近似成立。但在整个过程中，会有很多多余观测，即一个特征会被机器人在不同位置、不同时间进行观测，机器人每次也都会观测到多个特征，这就形成了约束。利用这些约束，就可以对数据进行优化。
+在SLAM 中，由于噪声的影响，观测方程和运动方程都只能近似成立。但在整个过程中，会有很多多余观测，即一个特征会被机器人在不同位置、不同时间进行观测，机器人每次也都会观测到多个特征，这就形成了约束。利用这些约束，就可以对数据进行优化。test
 
 ## 状态估计问题
 
