--- a/MachineLearning/4支持向量机.md
+++ b/MachineLearning/4支持向量机.md
@@ -16,10 +16,10 @@ $$
 $$
 \begin{cases}
 \omega^T\mathbf{x}+b \ge+1,\ y_i=+1 \\
-\omega^T\mathbf{x}+b \le+1,\ y_i=-1 \\
+\omega^T\mathbf{x}+b \le-1,\ y_i=-1 \\
 \end{cases}
 $$
-![屏幕快照 2018-01-24 15.22.46](/Users/lipenghua/Downloads/屏幕快照 2018-01-24 15.22.46.png)
+![屏幕快照 2018-01-24 15.22.46](4/屏幕快照 2018-01-24 15.22.46.png)
 
 可以看到距离超平面最近的几个训练样本可以使上式的等式成立。这些样本被称为**支持向量** (support vector)。两个*异类*支持向量到超平面的距离之和为：
 $$
@@ -103,14 +103,14 @@ $$
 
 **注意**：SVM 对于样本的尺度十分敏感。如下图所示，左图中竖轴的尺度远远大于横轴的尺度，所以SVM 求得的最大间隔会尽量接近水平（以获得最大的宽度）。
 
-![sensitivity_to_feature_scales_plot](../../../Downloads/sensitivity_to_feature_scales_plot.png)
+![sensitivity_to_feature_scales_plot](4/sensitivity_to_feature_scales_plot.png)
 
 ## 软间隔与正则化
 
 **问题**：
 
 - 硬间隔SVM要求数据必须是线性可分的；
-- 对outliers 十分敏感。有一个outlier。
+- 对outliers 十分敏感。有一个outlier即有可能分类失败。
 
 但是
 
@@ -140,7 +140,7 @@ $$
 - 指数损失：$l_{\exp}(z)=\exp(-z)$
 - 对率损失：$l_{\log}(z)=\log(1 + \exp(-z))$
 
-![屏幕快照 2018-01-26 14.45.20](../../../Downloads/屏幕快照 2018-01-26 14.45.20.png)
+![屏幕快照 2018-01-26 14.45.20](4/屏幕快照 2018-01-26 14.45.20.png)
 
 以hinge 损失为例，式(16) 变为：
 $$
@@ -279,7 +279,7 @@ $$
 
 显然，**特征空间的好坏**对支持向量机的性能至关重要。在不知道特征映射的形式时，我们并不知道什么样的核函数是合适的，而核函数也仅是隐式地走义了这个特征空间。于是，**核函数的选择**成为支持向量机的最大变数。常用的核函数有：
 
-![屏幕快照 2018-01-27 15.31.49](../../../Downloads/屏幕快照 2018-01-27 15.31.49.png)
+![屏幕快照 2018-01-27 15.31.49](4/屏幕快照 2018-01-27 15.31.49.png)
 
 此外，还可以通过**函数组合**得到新的核函数：
 
@@ -287,3 +287,36 @@ $$
 - 若$\kappa_1$ 和$\kappa_2$ 为核函数，其直积$\kappa_1\bigotimes\kappa_2(\mathbf{z},\mathbf{x})=\kappa_1(\mathbf{z},\mathbf{x})\kappa_1(\mathbf{z},\mathbf{x})$ 也是核函数；
 - 若$\kappa_1$ 为核函数，对于任意函数g(x)，$\kappa(\mathbf{x},\mathbf{z})=g(\mathbf{x})\kappa_1(\mathbf{x},\mathbf{z})g(\mathbf{z})$ 也是核函数。
 
+
+以多项式核为例，我们可以加入样本的高次项进入数据集中，但这会有维度爆炸等等问题。使用核技巧可以达到同样的效果而不必真的加入这些高次样本特征。
+
+### Adding Similarity Features
+
+另一个解决非线性问题的技巧是加入利用一个**相似函数**计算的特征。该函数计算每个样本和路标 (landmark) 的相似程度。例如，对于下图中的数据，加入两个路标x~1~ = -2 和x~1~ = 1。相似函数为*高斯径向基函数* (RBF), gamma 系数为0.3：
+$$
+\phi\gamma(\mathbf{x},\mathbf{l})=\exp(-\gamma||\mathbf{x} - \mathbf{l}||^2)
+$$
+利用该函数即可计算每个样本的新特征。例如样本x~1~ = -1，它与第一个路标距离为1，与第二个样本距离为2，该样本的新特征即为：x~2~ = exp(-0.3 * 1) = 0.74, x~2~ = exp(-0.3 * 4) = 0.30. 可见新的数据集是线性可分的。
+
+![屏幕快照 2018-02-12 18.22.00](../../../../../Downloads/屏幕快照 2018-02-12 18.22.00.png)
+
+**如何选择路标**：最简单的方法即在每个样本的位置都创建一个路标。则一个有m 个样本，每个样本有n 个特征的数据集会变为一个有m 个样本，m个特征的数据集。
+
+### 高斯核
+
+和多项式方法类似，使用相似方程的方法**适用于任何机器学习算法**。但其一样有计算量大的缺点。在SVM 中，可以直接使用高斯径向基函数核。
+
+```python
+rbf_kernel_svm_clf = Pipeline((
+    ("scaler", StandardScaler()), 
+    ("svm_clf", SVC(kernel="rbf", gamma=5, C=0.001))
+)) 
+
+rbf_kernel_svm_clf.fit(X, y)
+```
+
+![屏幕快照 2018-02-12 18.27.55](4/屏幕快照 2018-02-12 18.27.55.png)
+
+可以看到，增加gamma 使得分类边界变窄，使得每个样本的影响区间变小：分类边界变得更不规则，更靠近样本。因此，gamma 和C 类似，有**正则化**的效果：若过拟合则减小gamma；否则可以增大它。
+
+**核函数的选择**：As a rule of thumb, 应该先尝试**线性SVM**，特别是数据集很大、特征维度很高的时候。如果数据集大小合适，则可以尝试**高斯径向基函数**。然后，如果时间和算力允许，才挑选适合数据集的特殊核函数，如String kernels 特别适合于文本文件分类或DNA序列。
