--- a/MachineLearning/4支持向量机.md
+++ b/MachineLearning/4支持向量机.md
@@ -48,7 +48,7 @@ $$
 $$
 将式(7) 代入式(6) 将$\omega$ 和b 消去，在考虑式(8) 的约束，即可得到式(5) 的对偶问题
 $$
-\max_\alpha \sum_{i=1}^m\alpha_i-\frac{1}{2}\sum_{i=1}^m\alpha_i\alpha_jy_iy_j\mathbf{x}^T_i\mathbf{x}_j
+\max_\alpha \sum_{i=1}^m\alpha_i-\frac{1}{2}\sum_{i=1}^m\sum_{j=1}^m\alpha_i\alpha_jy_iy_j\mathbf{x}^T_i\mathbf{x}_j
 $$
 $$
 s.t.\ \sum\limits_{i=1}^m\alpha_iy_i=0,\ \alpha_i\ge0
@@ -63,20 +63,20 @@ $$
 \begin{cases}
 \alpha_i\ge0 \\
 y_if(\mathbf{x}_i)-1 \ge0 \\
-\alpha_oy_if(\mathbf{x}_i)-1 =0
+\alpha_i(y_if(\mathbf{x}_i)-1) =0
 \end{cases}
 $$
 则对任意训练样本$(\mathbf{x}_i,y_i)$，总有$\alpha_i=0$ 或$y_if(\mathbf{x}_i)=1$。
 
-- 若$\alpha_i=0​$，则该样本不会在式(10) 的求和中出现，也就不会对模型有任何影响；
+- 若$\alpha_i=0$，则该样本不会在式(11) 的求和中出现，也就不会对模型有任何影响；
 - 若$\alpha_i>0$，则必有$y_if(\mathbf{x}_i)=1$，对应的样本在最大间隔边界上，是一个**支持向量**。
 
-可得SVM 一个**重要性质**：训练完的最终模型只和支持向量有关，其他训练样本无需保留。
+可得SVM 一个**重要性质**：训练完的最终模型只和**支持向量**有关，其他训练样本无需保留。
 
 式(9) 的**经典解法**有SMO。**基本思路**是：先固定$\alpha_i$ 之外的所有参数，然后求$\alpha_i$ 上的极限。由于存在约束$\sum_{i=1}^m\alpha_iy_i=0$，若固定$\alpha_i$ 之外的其他变量，则$\alpha_i$ 可由其他变量导出。于是SMO 每次选择两个变量$\alpha_i$ 和$\alpha_j$ 并固定其他参数，初始化参数后不断执行以下两个步骤直至收敛：
 
 - 选取一对需更新的变量$\alpha_i$ 和$\alpha_j$；
-- 固定$\alpha_i$ 和$\alpha_j$ 意外以外的参数，求解式(9) 获得更新后的$\alpha_i$ 和$\alpha_j$。
+- 固定$\alpha_i$ 和$\alpha_j$ 以外的参数，求解式(9) 获得更新后的$\alpha_i$ 和$\alpha_j$。
 
 **注意到**只要选取的$\alpha_i$ 和$\alpha_j$ 中有一个**不满足**KKT 条件，目标函数就会在迭代后**减小**。*KKT条件的违背程度越大，变量更新后可能导致的目标函数值减幅越大*。所以，SMO 先选取违背KKT 条件程度最大的变量，第二个变量则选择一个使目标函数数值减小最快的变量。为此，SMO 使用了**启发式**策略：使选取的两变量所对应的样本之间的间隔最大。（**解释**：两个变量有很大的差别，与对两个相似的变量进行更新相比，对它们进行更新会带给目标函数值更大的变化。）
 
@@ -88,13 +88,13 @@ $$
 $$
 c=-\sum_{k\ne i,j}\alpha_ky_k
 $$
-是使$\sum_{i=1}^m\alpha_iy_i$ 成立的常数。
+是使$\sum_{i=1}^m\alpha_iy_i=0$ 成立的常数。
 
 用 $\alpha_iy_i+\alpha_jy_j=c$ 消去式(9) 中的变量$\alpha_j$，得到一个关于$\alpha_i$ 对单变量二次规划问题，仅有的约束时$\alpha_i\ge0$。
 
 最后需要求解偏移量b。对任意支持向量$(\mathbf{x}_s, y_s)$ 有
 $$
-y_i(\sum_{i\in S}\alpha_iy_i\mathbf{x}_i^T\mathbf{x}_s+b)=1
+y_s(\sum_{i\in S}\alpha_iy_i\mathbf{x}_i^T\mathbf{x}_s+b)=1
 $$
 其中S 为所有支持向量的下标集。可以选取**任意**支持向量求解上式来获得b。实际中常常使用**所有**支持向量然后**求取**平均值。
 $$
@@ -110,7 +110,7 @@ $$
 **问题**：
 
 - 硬间隔SVM要求数据必须是线性可分的；
-- 对outliers 十分敏感。有一个outlier即有可能分类失败。
+- 对outliers 十分敏感。有一个outlier 就有可能分类失败。
 
 但是
 
@@ -121,7 +121,7 @@ $$
 
 前面我们要求所有样本都要满足式(3)，即所有样本必须划分正确，称为**硬间隔**。*软间隔*则允许某些样本不满足这个约束。
 
-**目标**：在最大化间隔的同事，不满足约束的样本尽可能少：
+**目标**：在最大化间隔的同时，不满足约束的样本尽可能少：
 $$
 \min_{\omega, b}\frac{1}{2}||\omega||^2+C\sum\limits_{i=1}^ml_{0/1}(y_i(\omega^T\mathbf{x}_i+b)-1)
 $$
@@ -132,7 +132,7 @@ l_{0/1}(z)=\begin{cases}
 0,\ else
 \end{cases}
 $$
-显然，当C 越大，式(17) 要求越多样本都必须满足约束（间隔可能越小），此时接近硬间隔；当C 越小，则允许越多样本不满足（间隔可能越大）。且可以通过减小C 来缓解SVM 的过拟合。
+显然，当C 越大，式(17) 接近式(5)，要求越多样本都必须满足约束（间隔可能越小），此时接近硬间隔；当C 越小，则允许越多样本不满足（间隔可能越大）。且可以通过减小C 来缓解SVM 的过拟合。
 
 但$l_{0/1}$ 非凸、分连续，数学性质不好，常被其他函数替代，称为*替代损失* (surrogate loss)，这些函数一般是**凸的连续函数**且是$l_{0/1}$ 的**上界**。常用的有：
 
@@ -150,7 +150,7 @@ $$
 
 - 若样本分类正确且在间隔外，乘积大于1，相减后为负数，损失为0；
 - 若样本分类正确但在间隔内，乘积小于1， 相减后损失在0和1之间；
-- 若样本分类错误，乘积为大于1 的负数，损失大于1.
+- 若样本分类错误，乘积为绝对值大于1 的负数，损失大于1.
 
 引入**松弛变量** (slack variable) $\xi_i\ge0$，上式可以重写为：
 $$
@@ -174,7 +174,7 @@ $$
 C=\alpha_i+\mu_i
 \end{cases}
 $$
-回代后即可得到其（式(21)）的对偶问题：
+回代后即可得到其（式(20)）的对偶问题：
 $$
 \max_{\alpha}\sum_{i=1}^m\alpha_i - \frac{1}{2}\sum_{i=1}^m\sum_{j=1}^m\alpha_i\alpha_j y_i y_j\mathbf{x}_i^T \mathbf{x}_j
 $$
@@ -185,7 +185,7 @@ $$
 
 
 
-把上式与硬间隔下的对偶问题式(9) 对比可发现二者唯一的**差别**是**对对偶变量的约束不同**：前者比后者多要求$\alpha_i\le C$。
+把上式与硬间隔下的对偶问题式(9) 对比可发现二者唯一的**差别**是对**对偶变量的约束不同**：前者比后者多要求$\alpha_i\le C$。
 
 最后，对软间隔支持向量机，KKT 条件要求：
 $$
@@ -205,7 +205,7 @@ $$
   - 若$\xi_i\le1$，该样本落在最大间隔内部；
   - 若$\xi_i >1$，该样本被错分。
 
-**说明**软间隔支持向量机的最终模型仅与支持向量有关，即通过采用hinge 损失函数仍保持了稀疏性。
+**说明**软间隔支持向量机的最终模型仅与支持向量有关，即通过采用hinge 损失函数仍保持了**稀疏性**。
 
 **若采用对率损失函数**，则几乎得到了对率回归模型。二者**异同**：
 
@@ -236,7 +236,7 @@ f(\mathbf{x})=\omega^T\phi(\mathbf{x})+b
 $$
 类似于线性SVM，有
 $$
-\min_{\omega, b}\frac{1}{2}||\omega||^2 \ \ s.t.\ y_i(omega^T\phi(\mathbf{x}_i)+b)\ge1
+\min_{\omega, b}\frac{1}{2}||\omega||^2 \ \ s.t.\ y_i(\omega^T\phi(\mathbf{x}_i)+b)\ge1
 $$
 其对偶问题为
 $$
@@ -265,19 +265,19 @@ f(\mathbf{x}) & =\omega^T\phi(\mathbf{x})+b \\
  & =\sum_{i=1}^m \alpha_i y_i \kappa(\mathbf{x}_i, \mathbf{x}_j)+b
 \end{align}
 $$
-这里$\kappa(\cdot,\cdot)$ 就是*核函数* (kernel function)。显然，如知道$\phi(\cdot)$ 的具体形式，就可以写出$\kappa(\cdot,\cdot)$.
+这里$\kappa(\cdot,\cdot)$ 就是**核函数** (kernel function)。显然，如果知道$\phi(\cdot)$ 的具体形式，就可以写出$\kappa(\cdot,\cdot)$.
 
 **定义**：令X 为输入空间，$\kappa(\cdot,\cdot)$ 是定义在X * X 上的**对称函数**，则其为核函数当且仅当对于任意数据D，**核矩阵** K 总是半正定的。
 $$
 \mathbf{K}=\begin{bmatrix}
 \kappa(\mathbf{x}_1, \mathbf{x}_1)  & \ldots & \kappa(\mathbf{x}_1, \mathbf{x}_m) \\
 \vdots & & \vdots \\
-\kappa(\mathbf{x}_m, \mathbf{x}_1) & ldots & \kappa(\mathbf{x}_m, \mathbf{x}_m)
+\kappa(\mathbf{x}_m, \mathbf{x}_1) & \ldots & \kappa(\mathbf{x}_m, \mathbf{x}_m)
 \end{bmatrix}
 $$
 该定义说明，只要一个对称函数所对应的核矩阵半正定，它就能作为核函数使用。而对于一个半正定核矩阵，总能找到一个与之对应的映射$\phi$。换言之，任何一个核函数都隐式定义了一个称为*再生核希尔伯特空间* (RKHS) 的特征空间。
 
-显然，**特征空间的好坏**对支持向量机的性能至关重要。在不知道特征映射的形式时，我们并不知道什么样的核函数是合适的，而核函数也仅是隐式地走义了这个特征空间。于是，**核函数的选择**成为支持向量机的最大变数。常用的核函数有：
+显然，**特征空间的好坏**对支持向量机的性能至关重要。在不知道特征映射的形式时，我们并不知道什么样的核函数是合适的，而核函数也仅是隐式地定义了这个特征空间。于是，**核函数的选择**成为支持向量机的最大变数。常用的核函数有：
 
 ![屏幕快照 2018-01-27 15.31.49](4/屏幕快照 2018-01-27 15.31.49.png)
 
@@ -298,7 +298,7 @@ $$
 $$
 利用该函数即可计算每个样本的新特征。例如样本x~1~ = -1，它与第一个路标距离为1，与第二个样本距离为2，该样本的新特征即为：x~2~ = exp(-0.3 * 1) = 0.74, x~2~ = exp(-0.3 * 4) = 0.30. 可见新的数据集是线性可分的。
 
-![屏幕快照 2018-02-12 18.22.00](../../../../../Downloads/屏幕快照 2018-02-12 18.22.00.png)
+![屏幕快照 2018-02-12 18.22.00](4/屏幕快照 2018-02-12 18.22.00.png)
 
 **如何选择路标**：最简单的方法即在每个样本的位置都创建一个路标。则一个有m 个样本，每个样本有n 个特征的数据集会变为一个有m 个样本，m个特征的数据集。
 
@@ -317,6 +317,6 @@ rbf_kernel_svm_clf.fit(X, y)
 
 ![屏幕快照 2018-02-12 18.27.55](4/屏幕快照 2018-02-12 18.27.55.png)
 
-可以看到，增加gamma 使得分类边界变窄，使得每个样本的影响区间变小：分类边界变得更不规则，更靠近样本。因此，gamma 和C 类似，有**正则化**的效果：若过拟合则减小gamma；否则可以增大它。
+可以看到，增加$\gamma$ 使得分类边界变窄，使得每个样本的影响区间变小：分类边界变得更不规则，更靠近样本。因此，$\gamma$ 和C 类似，有**正则化**的效果：若过拟合则减小$\gamma$；否则可以增大它。
 
 **核函数的选择**：As a rule of thumb, 应该先尝试**线性SVM**，特别是数据集很大、特征维度很高的时候。如果数据集大小合适，则可以尝试**高斯径向基函数**。然后，如果时间和算力允许，才挑选适合数据集的特殊核函数，如String kernels 特别适合于文本文件分类或DNA序列。
