--- a/MachineLearning/4支持向量机.md
+++ b/MachineLearning/4支持向量机.md
@@ -42,8 +42,8 @@ $$
 令$L(\omega,b,\alpha)$ 对$\omega$ 和b 的偏导为0 可得：
 $$
 \begin{align}
-\omega=\sum\limits_{i=1}^m\alpha_iy_i\mathbf{x}_i \\
-0 = \sum\limits_{i=1}^m\alpha_iy_i
+\omega & =\sum\limits_{i=1}^m\alpha_iy_i\mathbf{x}_i \\
+0 & = \sum\limits_{i=1}^m\alpha_iy_i
 \end{align}
 $$
 将式(7) 代入式(6) 将$\omega$ 和b 消去，在考虑式(8) 的约束，即可得到式(5) 的对偶问题
@@ -73,7 +73,7 @@ $$
 
 可得SVM 一个**重要性质**：训练完的最终模型只和**支持向量**有关，其他训练样本无需保留。
 
-式(9) 的**经典解法**有SMO。**基本思路**是：先固定$\alpha_i$ 之外的所有参数，然后求$\alpha_i$ 上的极限。由于存在约束$\sum_{i=1}^m\alpha_iy_i=0$，若固定$\alpha_i$ 之外的其他变量，则$\alpha_i$ 可由其他变量导出。于是SMO 每次选择两个变量$\alpha_i$ 和$\alpha_j$ 并固定其他参数，初始化参数后不断执行以下两个步骤直至收敛：
+式(9) 的**经典解法**有SMO（序列最小化）。**基本思路**是：先固定$\alpha_i$ 之外的所有参数，然后求$\alpha_i$ 上的极限。由于存在约束$\sum_{i=1}^m\alpha_iy_i=0$，若固定$\alpha_i$ 之外的其他变量，则$\alpha_i$ 可由其他变量导出。于是SMO 每次选择两个变量$\alpha_i$ 和$\alpha_j$ 并固定其他参数，初始化参数后不断执行以下两个步骤直至收敛：
 
 - 选取一对需更新的变量$\alpha_i$ 和$\alpha_j$；
 - 固定$\alpha_i$ 和$\alpha_j$ 以外的参数，求解式(9) 获得更新后的$\alpha_i$ 和$\alpha_j$。
@@ -320,3 +320,90 @@ rbf_kernel_svm_clf.fit(X, y)
 可以看到，增加$\gamma$ 使得分类边界变窄，使得每个样本的影响区间变小：分类边界变得更不规则，更靠近样本。因此，$\gamma$ 和C 类似，有**正则化**的效果：若过拟合则减小$\gamma$；否则可以增大它。
 
 **核函数的选择**：As a rule of thumb, 应该先尝试**线性SVM**，特别是数据集很大、特征维度很高的时候。如果数据集大小合适，则可以尝试**高斯径向基函数**。然后，如果时间和算力允许，才挑选适合数据集的特殊核函数，如String kernels 特别适合于文本文件分类或DNA序列。
+
+## 支持向量回归
+
+给定训练样本集$D=\{(\mathbf{x}_1, y_1), (\mathbf{x}_2, y_2), \ldots, (\mathbf{x}_m,y_m\},\ y_i\in R$，希望学得一个**回归模型**，使得f(x) 和y 尽可能接近。
+
+对样本 (x, y)，传统回归模型通常直接基于模型输出f(x) 与真实输出y 之间的差别来计算损失，当且仅当f(x) 与y 完全相同时，损失才为零。与此不同，支持向量回归 (Support Vector Regression, SVR)，假设我们能容忍f(x) 与y 之间最多有$\epsilon$ 的偏差，即仅当f(x) 与y 之间的差别绝对值大于$\epsilon$时才计算损失。这相当于以f(x) 为中心，构建了一个**宽度为$2\epsilon$ 的间隔带**。若样本**落入间隔带**，则是预测正确的。
+
+![屏幕快照 2018-02-13 09.49.13](../../../../../Downloads/屏幕快照 2018-02-13 09.49.13.png)
+
+SVR 问题可以形式化为：
+$$
+\min_{\omega, b} \frac{1}{2}||\omega||^2+C\sum_{i=1}^m l_{\epsilon}(f(\mathbf{x}_i)-y_i)
+$$
+其中C 为正则化常数，$l_{\epsilon}$ 为下图所示的$\epsilon$ - 不敏感损失函数：
+$$
+l_{\epsilon}(z)=\begin{cases}
+0,\ \ if\ |z| \le\epsilon, \\
+|z|-\epsilon,\ \ otherwise.
+\end{cases}
+$$
+![屏幕快照 2018-02-13 09.55.24](../../../../../Downloads/屏幕快照 2018-02-13 09.55.24.png)
+
+引入松弛变量$\xi_i$ 和$\hat\xi_i$，则式(38) 重写为：
+$$
+\min_{\omega, b, \xi_i, \hat\xi_i} \frac{1}{2}||\omega||^2+C\sum_{i=1}^m(\xi_i + \hat\xi_i)
+$$
+
+$$
+\begin{align}
+s.t.\ \ & f(\mathbf{x}_i) - y_i \le \epsilon + \xi_i,\\
+ & y_i - f(\mathbf{x}_i) \le \epsilon + \hat\xi_i,\\
+ & \xi_i \ge 0,\ \hat\xi_i \ge 0
+\end{align}
+$$
+
+类似式(21)，引入拉格朗日乘子$\mu_i \ge 0,\hat\mu_i\ge 0,\alpha_i \ge 0,\hat\alpha_i\ge 0$，可得到式(40) 的拉格朗日函数：
+$$
+L(\omega, b, \alpha, \hat\alpha, \xi, \hat\xi, \mu, \hat\mu)\\
+=\frac{1}{2}||\omega||^2 + C\sum_{i=1}^m(\xi_i+\hat\xi_i) - \sum_{i=1}^m\mu_i \xi_i - \sum_{i=1}^m\hat\mu_i \hat\xi_i\\
++\sum_{i=1}^m\alpha_i (f(\mathbf{x}_i)-y_i - \epsilon - \xi_i) + \sum_{i=1}^m \hat\alpha_i (y_i - f(\mathbf{x}_i) - \epsilon - \hat\xi_i)
+$$
+将式 $f(\mathbf{x}_i)=\omega^T\mathbf{x}+b$ 代入，令上式对$\omega, b, \xi_i, \hat\xi_i$ 的偏导为零即可得：
+$$
+\begin{align}
+\omega & = \sum_{i=1}^m (\hat\alpha_i - \alpha_i)\mathbf{x}_i, \\
+0 & = \sum_{i=1}^m (\hat\alpha_i-\alpha_i), \\
+C & = \alpha_i+\mu_i,\\
+C & = \hat\alpha_i+\hat\mu_i
+\end{align}
+$$
+将上面4 个式子代入式(44) 中，即可得到SVR 的对偶问题：
+$$
+\max_{\alpha, \hat\alpha}\sum_{i=1}^my_i(\hat\alpha_i - \alpha_i) - \epsilon(\hat\alpha_i+\alpha_i)\\
+- \frac{1}{2}\sum_{i=1}^m\sum_{i=1}^m(\hat\alpha_i - \alpha_i)(\hat\alpha_j - \alpha_j)\mathbf{x}^T_i\mathbf{x}_j
+$$
+
+$$
+s.t.\ \ \sum_{i=1}^m(\hat\alpha_i-\alpha_i)=0,\ \ 0 \le \alpha_i, \hat\alpha_i \le C
+$$
+
+上述过程同样需要满足KKT 条件：
+$$
+\begin{cases}
+\alpha_i(f(\mathbf{x}_i)-y_i - \epsilon - \xi_i) = 0,\\
+\hat\alpha_i(y_i-f(\mathbf{x}_i)-\epsilon-\hat\xi_i) = 0,\\
+\alpha_i \hat\alpha_i=0,\ \xi_i \hat\xi_i = 0, \\
+(C-\alpha_i)\xi_i = 0,\ (C - \hat\alpha_i)\hat\xi_i = 0.
+\end{cases}
+$$
+可以看出，当且仅当$f(\mathbf{x}_i)-y_i - \epsilon - \xi_i = 0$ 时，$\alpha_i$ 才可以取非零值；当且仅当$y_i-f(\mathbf{x}_i)-\epsilon-\hat\xi_i = 0$ 时$\hat\alpha_i$ 能取非零值。换言之，仅当样本(x~i~, y~i~) **不落入**$\epsilon$ - 间隔带中，相应的$\alpha_i, \hat\alpha_i$ 才能取非零值。而且，约束$f(\mathbf{x}_i)-y_i - \epsilon - \xi_i=0$ 和$y_i-f(\mathbf{x}_i)-\epsilon-\hat\xi_i=0$ **不能同时成立**，因此$\alpha_i, \hat\alpha_i$ 中至少一个为零。
+
+最后，将式(45) 代入回归式中，得到SVR 的解形如：
+$$
+f(\mathbf{x})=\sum_{i=1}^m(\hat\alpha_i - \alpha_i)\mathbf{x}^T_i\mathbf{x}+ b
+$$
+能使上式中的$\hat\alpha_i - \alpha \ne 0$ 的样本即为SVR 的支持向量，它们必落在$\epsilon$ - 间隔带之外。显然，SVR 的支持向量仅仅是训练样本的一部分，即**解具有稀疏性**。
+
+由KKT 条件(51) 可以看出，对于每个样本都有$(C-\alpha_i)\xi_i = 0$ 和$\alpha_i(f(\mathbf{x}_i)-y_i - \epsilon - \xi_i) = 0$。在得到$\alpha_i$ 后，若$0<\alpha_i<C$，则必有$\xi_i=0$。进而有：
+$$
+b=y_i+\epsilon-\sum_{i=1}^m(\hat\alpha_i-\alpha_i)\mathbf{x}^T_i\mathbf{x}
+$$
+因此，在得到$\alpha_i$ 后，理论上可以选择任意满足$0<\alpha_i<C$ 的样本来求解b。实践中常选取多个或所有满足条件的样本来求解再取平均值。
+
+如果考虑特征映射形式$\phi(\mathbf{x}_i)$ 及其对应的核函数$\kappa(\mathbf{x}_i,\mathbf{x}_j)=\phi(\mathbf{x}_i)^T \phi(\mathbf{x}_j)$，SVR 可表示为：
+$$
+f(\mathbf{x})=\sum_{i=1}^m(\hat\alpha_i-\alpha_i)\kappa(\mathbf{x},\mathbf{x}_i)+b
+$$
