--- a/MachineLearning/4支持向量机.md
+++ b/MachineLearning/4支持向量机.md
@@ -325,7 +325,7 @@ rbf_kernel_svm_clf.fit(X, y)
 
 给定训练样本集$D=\{(\mathbf{x}_1, y_1), (\mathbf{x}_2, y_2), \ldots, (\mathbf{x}_m,y_m\},\ y_i\in R$，希望学得一个**回归模型**，使得f(x) 和y 尽可能接近。
 
-对样本 (x, y)，传统回归模型通常直接基于模型输出f(x) 与真实输出y 之间的差别来计算损失，当且仅当f(x) 与y 完全相同时，损失才为零。与此不同，支持向量回归 (Support Vector Regression, SVR)，假设我们能容忍f(x) 与y 之间最多有$\epsilon$ 的偏差，即仅当f(x) 与y 之间的差别绝对值大于$\epsilon$时才计算损失。这相当于以f(x) 为中心，构建了一个**宽度为$2\epsilon$ 的间隔带**。若样本**落入间隔带**，则是预测正确的。
+对样本 (x, y)，传统回归模型通常直接基于模型输出f(x) 与真实输出y 之间的差别来计算损失，当且仅当f(x) 与y 完全相同时，损失才为零。与此不同，支持向量回归 (Support Vector Regression, SVR)，假设我们能容忍f(x) 与y 之间最多有$\epsilon$ 的偏差，即仅当f(x) 与y 之间的差别绝对值大于$\epsilon$时才计算损失。这相当于以f(x) 为中心，构建了一个**宽度为$2\epsilon$ 的间隔带**。若样本**落入间隔带**，则是预测正确的。（SVR 的目标与SVM 正好相反，它使尽可能多的样本落在间隔内并尽力限制间隔的大小。）
 
 ![屏幕快照 2018-02-13 09.49.13](../../../../../Downloads/屏幕快照 2018-02-13 09.49.13.png)
 
@@ -395,7 +395,7 @@ $$
 $$
 f(\mathbf{x})=\sum_{i=1}^m(\hat\alpha_i - \alpha_i)\mathbf{x}^T_i\mathbf{x}+ b
 $$
-能使上式中的$\hat\alpha_i - \alpha \ne 0$ 的样本即为SVR 的支持向量，它们必落在$\epsilon$ - 间隔带之外。显然，SVR 的支持向量仅仅是训练样本的一部分，即**解具有稀疏性**。
+能使上式中的$\hat\alpha_i - \alpha \ne 0$ 的样本即为SVR 的**支持向量**，它们必落在$\epsilon$ - 间隔带之外。显然，SVR 的支持向量仅仅是训练样本的一部分，即**解具有稀疏性**。
 
 由KKT 条件(51) 可以看出，对于每个样本都有$(C-\alpha_i)\xi_i = 0$ 和$\alpha_i(f(\mathbf{x}_i)-y_i - \epsilon - \xi_i) = 0$。在得到$\alpha_i$ 后，若$0<\alpha_i<C$，则必有$\xi_i=0$。进而有：
 $$
