--- a/MachineLearning/4支持向量机.md
+++ b/MachineLearning/4支持向量机.md
@@ -117,11 +117,11 @@ $$
 - 现实任务很难确定合适的核函数使训练样本在特征空间中线性可分；
 - 即使恰好找到了某个核函数使训练集在特征空间中线性可分，也很难断定这个貌似线性可分的结果不是由于过拟合所造成的 。
 
-**解决**：允许SVM 在一些样本上出错。为此，引入**软间隔** (soft margin) 的概念。
+**解决**：允许SVM 在一些样本上出错或落在间隔内。为此，引入**软间隔** (soft margin) 的概念。
 
 前面我们要求所有样本都要满足式(3)，即所有样本必须划分正确，称为**硬间隔**。*软间隔*则允许某些样本不满足这个约束。
 
-**目标**：在最大化间隔的同时，不满足约束的样本尽可能少：
+**目标**：在最大化间隔的同时，不满足约束的样本尽可能少（二者相互矛盾，引入C 作为这两个目标平衡）：
 $$
 \min_{\omega, b}\frac{1}{2}||\omega||^2+C\sum\limits_{i=1}^ml_{0/1}(y_i(\omega^T\mathbf{x}_i+b)-1)
 $$
@@ -152,14 +152,14 @@ $$
 - 若样本分类正确但在间隔内，乘积小于1， 相减后损失在0和1之间；
 - 若样本分类错误，乘积为绝对值大于1 的负数，损失大于1.
 
-引入**松弛变量** (slack variable) $\xi_i\ge0$，上式可以重写为：
+引入**松弛变量** (slack variable) $\xi_i\ge0$ (代表了第i 个样本**不满足约束(3) 的程度**)，上式可以重写为：
 $$
 \min_{\omega, b, \xi_i}\frac{1}{2}||\omega||^2 + C\sum_{i=1}^m\xi_i \\
 s.t.\ y_i(\omega^T\mathbf{x}_i+b)\ge1-\xi_i,\ \xi_i\ge0
 $$
 即为**软间隔支持向量机**。
 
-显然，上式中每个样本都有一个对应的松弛变量用以**表征该样本不满足约束(3) 的程度 **。通过拉格朗日乘子法可得：
+通过拉格朗日乘子法可得：
 $$
 L(\omega,b,\alpha,\xi,\mu)=\frac{1}{2}||\omega||^2+C\sum_{i=1}^m\xi_i\\
 +\sum_{i=1}^m\alpha_i(1-\xi_i-y_i(\omega^T\mathbf{x}_i+b))-\sum_{i=1}^m\mu_i\xi_i
@@ -253,7 +253,7 @@ $$
 $$
 \kappa(\mathbf{x}_i, \mathbf{x}_j)=\langle\phi(\mathbf{x}_i), \phi(\mathbf{x}_j)\rangle=\phi(\mathbf{x}_i)^T \phi(\mathbf{x}_j)
 $$
-即二者在高维特征空间的内积为它们在**原始样本空间**中通过函数$\kappa(\cdot,\cdot)$ 计算的结果。式(29) 可写为
+即二者在高维特征空间的内积为它们在**原始样本空间**中通过函数$\kappa(\cdot,\cdot)​$ 计算的结果。式(29) 可写为
 $$
 \max_{\alpha}\sum_{i=1}^m\alpha_i-\frac{1}{2}\sum_{i=1}^m\sum_{j=1}^m \alpha_i \alpha_j y_i y_j \kappa(\mathbf{x}_i, \mathbf{x}_j)
 $$
@@ -298,7 +298,7 @@ $$
 $$
 利用该函数即可计算每个样本的新特征。例如样本x~1~ = -1，它与第一个路标距离为1，与第二个样本距离为2，该样本的新特征即为：x~2~ = exp(-0.3 * 1) = 0.74, x~2~ = exp(-0.3 * 4) = 0.30. 可见新的数据集是线性可分的。
 
-![屏幕快照 2018-02-12 18.22.00](4/屏幕快照 2018-02-12 18.22.00.png)
+![kernel_method_plot](4/kernel_method_plot.png)
 
 **如何选择路标**：最简单的方法即在每个样本的位置都创建一个路标。则一个有m 个样本，每个样本有n 个特征的数据集会变为一个有m 个样本，m个特征的数据集。
 
@@ -315,7 +315,7 @@ rbf_kernel_svm_clf = Pipeline((
 rbf_kernel_svm_clf.fit(X, y)
 ```
 
-![屏幕快照 2018-02-12 18.27.55](4/屏幕快照 2018-02-12 18.27.55.png)
+![moons_rbf_svc_plot](4/moons_rbf_svc_plot.png)
 
 可以看到，增加$\gamma$ 使得分类边界变窄，使得每个样本的影响区间变小：分类边界变得更不规则，更靠近样本。因此，$\gamma$ 和C 类似，有**正则化**的效果：若过拟合则减小$\gamma$；否则可以增大它。
 
@@ -325,7 +325,7 @@ rbf_kernel_svm_clf.fit(X, y)
 
 给定训练样本集$D=\{(\mathbf{x}_1, y_1), (\mathbf{x}_2, y_2), \ldots, (\mathbf{x}_m,y_m\},\ y_i\in R$，希望学得一个**回归模型**，使得f(x) 和y 尽可能接近。
 
-对样本 (x, y)，传统回归模型通常直接基于模型输出f(x) 与真实输出y 之间的差别来计算损失，当且仅当f(x) 与y 完全相同时，损失才为零。与此不同，支持向量回归 (Support Vector Regression, SVR)，假设我们能容忍f(x) 与y 之间最多有$\epsilon$ 的偏差，即仅当f(x) 与y 之间的差别绝对值大于$\epsilon$时才计算损失。这相当于以f(x) 为中心，构建了一个**宽度为$2\epsilon$ 的间隔带**。若样本**落入间隔带**，则是预测正确的。（SVR 的目标与SVM 正好相反，它使尽可能多的样本落在间隔内并尽力限制间隔的大小。）
+对样本 (x, y)，传统回归模型通常直接基于模型输出f(x) 与真实输出y 之间的差别来计算损失，当且仅当f(x) 与y 完全相同时，损失才为零。与此不同，支持向量回归 (Support Vector Regression, SVR)，假设我们能容忍f(x) 与y 之间最多有$\epsilon$ 的偏差，即仅当f(x) 与y 之间的差别绝对值大于$\epsilon$时才计算损失。这相当于以f(x) 为中心，构建了一个**宽度为$2\epsilon$ 的间隔带**。若样本**落入间隔带**，则是预测正确的。*（SVR 的目标与SVM 正好相反，它使尽可能多的样本落在间隔内并尽力限制间隔的大小。）*
 
 ![屏幕快照 2018-02-13 09.49.13](../../../../../Downloads/屏幕快照 2018-02-13 09.49.13.png)
 
@@ -395,7 +395,7 @@ $$
 $$
 f(\mathbf{x})=\sum_{i=1}^m(\hat\alpha_i - \alpha_i)\mathbf{x}^T_i\mathbf{x}+ b
 $$
-能使上式中的$\hat\alpha_i - \alpha \ne 0$ 的样本即为SVR 的**支持向量**，它们必落在$\epsilon$ - 间隔带之外。显然，SVR 的支持向量仅仅是训练样本的一部分，即**解具有稀疏性**。
+能使上式中的$\hat\alpha_i - \alpha \ne 0$ 的样本即为SVR 的**支持向量**，它们必落在$\epsilon$ - 间隔带**之外** (加入位于间隔带内的样本对模型没有影响)。显然，SVR 的支持向量仅仅是训练样本的一部分，即**解具有稀疏性**。
 
 由KKT 条件(51) 可以看出，对于每个样本都有$(C-\alpha_i)\xi_i = 0$ 和$\alpha_i(f(\mathbf{x}_i)-y_i - \epsilon - \xi_i) = 0$。在得到$\alpha_i$ 后，若$0<\alpha_i<C$，则必有$\xi_i=0$。进而有：
 $$
@@ -407,3 +407,15 @@ $$
 $$
 f(\mathbf{x})=\sum_{i=1}^m(\hat\alpha_i-\alpha_i)\kappa(\mathbf{x},\mathbf{x}_i)+b
 $$
+
+## Under the hood (补充)
+
+SVM 的决策边界 (decision boundary) 是令决策方程 (decision function) 为零的点 (亦即分割超平面)：对于二维数据来说，分割直线为数据平面和决策方程平面的交线：
+
+![iris_3D_plot](4/iris_3D_plot.png)
+
+**几何解释**：注意到决策方程的斜率为权重向量的模$||\omega||$，且如果我们将斜率除2则相当于将间隔增大2倍 (如下图所示)，所以我们的优化目标为尽力减小$||\omega||$。
+
+![small_w_large_margin_plot](4/small_w_large_margin_plot.png)
+
+SVM 的原问题是一个primal problem，一个primal problem 需满足一定条件才能保证对应对偶问题的解也是原问题的解：the objective function is convex and the inequaliry constraints are continuously differentiable and convex functions.
