--- a/MachineLearning/5决策树.md
+++ b/MachineLearning/5决策树.md
@@ -6,7 +6,17 @@
 
 **性质**：一棵决策树包含一个根结点、若干个内部结点和若干个叶结点；叶结点对应于决策结果，其他每个结点则对应于一个属性测试；每个结点包含的样本集合根据属性测试的结果被划分到子结点中；根结点包含样本全集。从根结点到每个叶结点的路径对应了一个判定测试序列。
 
-**基本流程**：*分而治之*。
+**优点**：不需要太多的数据预处理，如不需要scaling 等；不对数据集做任何假设。
+
+若不加限制，决策树会尽可能地去“贴合”训练集 (过拟合)，因为我们并未对决策树的**参数数量**进行限制。这种模型也叫做 *nonparametric model*。相反，一个 *parametric model*，如线性模型，因其限制了参数数量而限制了模型的**自由度**，这减少了过拟合的风险但增加了欠拟合的风险。
+
+此外，决策树也可以用来预测样本属于某个类别的**概率**。流程和分类相同，遍历决策树达到叶子结点后，该叶子结点中属于类别k 的样本的**比例**即为待预测样本属于该类别的概率。
+
+**预测的复杂度**：$O(\log_2m)$;
+
+**训练的复杂度**：$O(n \times m\log m)$
+
+**基本流程**：*分而治之（+贪心）*。
 
 ![屏幕快照 2018-03-03 16.04.50](../../../../../Downloads/屏幕快照 2018-03-03 16.04.50.png)
 
@@ -62,6 +72,8 @@ Gini\_index(D, a) = \sum_{v = 1}^V\frac{|D^v|}{|D|}Gini(D^v)
 $$
 因此，在候选属性集合A 中，选取使得换分后基尼指数最小的属性作为最优划分属性。
 
+基尼指数和熵的不同在于：Gini impurity tends to isolate the most frequent class in its own branch of the tree, while entropy tends to produce slightly more balanced tree.
+
 ## 剪枝处理
 
 *剪枝* (pruning) 是决策树学习算法对付*过拟合*的主要手段。有时决策树会分支过多，这时就可能因训练样本学得"太好"了，以致于把训练集自身的一些特点当作所有数据都具有的一般性质而导致过拟合。
@@ -98,6 +110,14 @@ $$
 **二者对比**：后剪枝泛发性能佳，但训练时间开销大。
 
 可看出，后剪枝决策树通常比预剪枝决策树保留了更多的分支。一般情形下，后剪枝决策树的欠拟合风险很小，泛化性能往往优于预剪枝决策树。但后剪枝过程是在生成完全决策树之后进行的，并且要白底向上地对树中的所有非叶结点进行逐一考察，因此其训练时间开销比未剪枝决策树和预剪枝决策树都要大得多。
+
+### 其他
+
+除了简单地比较精度，纯度的提升也可以用一些数理统计检测 (standard statistical tests) 来衡量，如$\chi ^2$ 测试。
+
+除了剪枝处理，还有其他很多种方法来预防过拟合。例如，限制树的高度，叶子结点的数目等扽。在sklearn 中，
+
+`DecisionTreeClassifier` 类提供了许多类似的参数，如`max_depth`, `min_samples_split`, `max_leaf_nodes` 等。
 
 ## 连续与缺失值
 
