--- a/MachineLearning/5决策树.md
+++ b/MachineLearning/5决策树.md
@@ -173,6 +173,8 @@ $$
 
 **优点**：这样的分类边界使得学习结果有较好的**可解释性**。
 
+**缺点**：对数据集的*旋转*较为敏感。（**解决**：PCA。）
+
 ![屏幕快照 2018-03-04 15.47.22](../../../../../Downloads/屏幕快照 2018-03-04 15.47.22.png)
 
 *多变量决策树* (multivariate decision tree) 中，非叶节点不再仅对某个属性，而是对属性的**线性组合**进行测试，即每个非叶节点是一个$\sum_{i=1}^d \omega_i a_i=t$ 的线性分类器，其中w~i~ 为属性a~i~ 的权重。w~i~ 和t 可在**该节点所含的样本集和属性集**上习得。
@@ -183,3 +185,17 @@ $$
 
 ![屏幕快照 2018-03-04 16.24.32](../../../../../Downloads/屏幕快照 2018-03-04 16.24.32.png)
 
+最后，决策树还对**数据集的微小变化**十分敏感。例如，对数据集一些极值的增减可以得到十分不同的决策树。（使用随机森林可以减轻决策树的这些缺点。）
+
+# 决策树回归
+
+决策树也可以用来做回归任务。和分类任务不同的是，回归决策树的叶子结点为输入数据给出一个预测值。通常，这个预测值就是该叶子结点做包含的样本数据的均值（和方差）。
+
+![tree_regression_plot](../../../../../Downloads/tree_regression_plot.png)
+
+回归决策树以最小化每个结点的MSE 来划分训练数据，即其试图让训练数据尽可能地靠近预测值。其**代价函数**为：
+$$
+J(k, t_k)=\frac{m_{left}}{m}MSE_{left} + \frac{m_right}{m}MSE_{right}\\
+MSE_{node}=\sum_{i \in node}(\hat y_{node} - y^{(i)})^2,\ \hat y_{node}=\frac{1}{m_{node}}\sum_{i \in node}y^{(i)}
+$$
+和分类决策树相同，若不加限制，回归决策树也倾向与过拟合数据。
