--- a/SLAM/特征点法前端.md
+++ b/SLAM/特征点法前端.md
@@ -1,12 +1,45 @@
 # 特征点法前端
 
+前端又称为*视觉里程计* (VO)，它根据相邻图像的信息来估计出相机的运动。估计值即可作为结果输出，也可以作为初始值提供给后端来进行优化。VO 的实现，按照是否提取图像特征，分为*特征点法前端*和*直接法前端*。本讲介绍的是特征法前端。
+
 ## 特征点与特征点匹配
+
+如前所述，VO 的主要问题是**根据图像来估计相机的运动**。一般来说，我们首先从图像中选取出比较有代表性的点，然后根据这些点来估计相机的位姿（和点的定位）。在SLAM 中，这些点也称为**路标**。
 
 ### 特征点
 
+数字图像在计算机中是以数值矩阵的方式来进行存储的。因此，单个像素也是一种特征。但我们希望所提取的特征能够在**相机运动后保持稳定**，即有一定程度的不变性。而单个像素往往收到光照、视角、形变等等因素的影响而变得不稳定。因此，在计算机视觉从，常常通过人工设计的特征提取器来获取具有鲁棒性的图像特征。
+
+常见的图像特征就是角点。角点有易辨认易提取的特点。但它也存在一些问题。比如距离的影响：从远处看是角点的地方，相机移近之后却不是了。还有旋转的影响：相机旋转后，不同影像上的同一角点可能就具有不同的外观。
+
+为此，研究者们设计了许多能够提取具有足够鲁棒性特征提取算法，如SIFT, SURE, ORB 等等。这些人工设计的特征点一般都具备如下**性质**：
+
+1. 可重复性：相同的特征点可以在不同的影像上找到；
+2. 可区别性：不同的特征点具有不同的表达；
+3. 高效率：同一图像中，特征点的数量远小于像素的数量；
+4. 本地性：提取的特征点仅仅和一小片图像区域相关。
+
+一个特征点由**关键点** (key-point) 和**描述子** (descriptor) 两部分组成。关键点指的是该特征点在图像上的位置信息，有些还具有方向、大小等其他信息。描述子通常是一个向量，它按照某种人为设计的方式，描述了特征点周围像素点信息。描述子点一个重要设计原则就是**外观相似的特征具有相似的描述子**。
+
+由于SLAM 是一种实时应用，因此除了鲁棒性之外，算法的**实时性**也应该被考虑。实际上，特征点提取和匹配占据了SLAM 主要的时间消耗。因此选用合适的特征提取算法至关重要。如SIFT 算子虽好，但计算量太大，时间消耗过多。虽然大部分的特征提取都具有良好的并行性，可以使用GPU 来加速运算，但由此带来的成本提升也要纳入考量。而ORB算子是质量和效率之间比较好的折中方案，常被用在目前的视觉SLAM 方案中。
+
 ####ORB
 
+网上关于ORB 算子的资料很多，相关论文也可以直接获取。这里仅仅进行一个简要的叙述。
+
+ORB 特征一样由*关键点*和*描述子*两部分组成。它的关键点为*Oriented FAST*，是FAST 算子的一种改进；描述子则是BRIEF。
+
+FAST 算子很高效，但不具备尺度和旋转不变性。通过构建**影像金字塔**，在不同尺度的影像上提取特征来增加尺度不变性。然后引入**像素重心**来确定特征点的方向，引入旋转不变性。中间还可以使用Harris 角点滤波来提取出N 个最有可能的角点。
+
+传统的BRIEF 描述子一样不具备旋转不变性，同样通过像素中心所确定的特征点方向来作为描述子点方向，得到*steer BRIEF*。最后，为了得到更好的两两比较模式，利用一个角点数据集和贪心算法得到一个具有高方差、低相关的模式，用以构建合适的描述子，称为*rBRIEF*。
+
+原论文[ORB](http://www.cs.zju.edu.cn/~gpan/course/materials/ORB.pdf) 在此。
+
 ### 特征匹配
+
+完成特征提取后，就可以进行特征匹配了。特征匹配解决了SLAM 中的数据关联问题，即**确定了当前看到的路标和之前看到的路标之间的对应关系**。
+
+最简单的特征匹配方法就是**暴力匹配** (brute-force matching)：计算待匹配特征点与其他特征点之间的距离，然后按距离排序，选取距离最近的特征点作为匹配点。在这里，描述子间的距离表示了两个特征点之间的**相似程度**，有欧式距离，汉明距离等等。对于特征点数量巨大的情况，**快速近似最邻近** (FLANN) 算法会更为高效。
 
 ## 对极几何
 
