--- a/DataStructureAndAlgorithm/Graph/图.md
+++ b/DataStructureAndAlgorithm/Graph/图.md
@@ -23,5 +23,5 @@
 
 **邻接表**(adjacency list)：对每一个顶点，使用一个*表* (bag, list, vector etc) 存放所有的邻接点。空间需求$O(|E|+|V|)$，相对于图的大小是**线性**的。如果边有权，则存放在单元中。无向图的边(u, v) 则出现在两个表中。
 
-![屏幕快照 2018-01-20 21.37.24](/Users/lipenghua/Downloads/屏幕快照 2018-01-20 21.37.24.png)
+![屏幕快照 2018-01-20 21.37.24](屏幕快照 2018-01-20 21.37.24.png)
 
