--- a/MachineLearning/3线性模型.md
+++ b/MachineLearning/3线性模型.md
@@ -133,7 +133,7 @@ $$
 
 **优点**：当代价函数不规则时，随机梯度下降会帮它**跳出局部最小值**。
 
-**解决**：逐步减小学习率。这就是**模拟退火**算法：一开始时使用较大的迭代步长（来加快进度和跳出局部最小值），然后不断减小学习率以减小迭代步长，保证算法可以 settle at the global minimum.（用来计算学习率的函数称为*learning schedule*.）
+**解决**：逐步减小学习率。**模拟退火**算法：一开始时使用较大的迭代步长（来加快进度和跳出局部最小值），然后不断减小学习率以减小迭代步长，保证算法可以 settle at the global minimum.（用来计算学习率的函数称为*learning schedule*.）
 
 **另一个问题**：选取数据的随机性：有些数据会被选取好几次而**有些数据从来用不到**。
 
