--- a/MachineLearning/4支持向量机.md
+++ b/MachineLearning/4支持向量机.md
@@ -327,7 +327,7 @@ rbf_kernel_svm_clf.fit(X, y)
 
 对样本 (x, y)，传统回归模型通常直接基于模型输出f(x) 与真实输出y 之间的差别来计算损失，当且仅当f(x) 与y 完全相同时，损失才为零。与此不同，支持向量回归 (Support Vector Regression, SVR)，假设我们能容忍f(x) 与y 之间最多有$\epsilon$ 的偏差，即仅当f(x) 与y 之间的差别绝对值大于$\epsilon$时才计算损失。这相当于以f(x) 为中心，构建了一个**宽度为$2\epsilon$ 的间隔带**。若样本**落入间隔带**，则是预测正确的。*（SVR 的目标与SVM 正好相反，它使尽可能多的样本落在间隔内并尽力限制间隔的大小。）*
 
-![屏幕快照 2018-02-13 09.49.13](../../../../../Downloads/屏幕快照 2018-02-13 09.49.13.png)
+![屏幕快照 2018-02-13 09.49.13](4/屏幕快照 2018-02-13 09.49.13.png)
 
 SVR 问题可以形式化为：
 $$
@@ -340,7 +340,7 @@ l_{\epsilon}(z)=\begin{cases}
 |z|-\epsilon,\ \ otherwise.
 \end{cases}
 $$
-![屏幕快照 2018-02-13 09.55.24](../../../../../Downloads/屏幕快照 2018-02-13 09.55.24.png)
+![屏幕快照 2018-02-13 09.55.24](4/屏幕快照 2018-02-13 09.55.24.png)
 
 引入松弛变量$\xi_i$ 和$\hat\xi_i$，则式(38) 重写为：
 $$
