--- a/MachineLearning/5决策树.md
+++ b/MachineLearning/5决策树.md
@@ -18,7 +18,7 @@
 
 **基本流程**：*分而治之（+贪心）*。
 
-![屏幕快照 2018-03-03 16.04.50](../../../../../Downloads/屏幕快照 2018-03-03 16.04.50.png)
+![屏幕快照 2018-03-03 16.04.50](5/屏幕快照 2018-03-03 16.04.50.png)
 
 显然，决策树的生成是一个递归过程。**递归的三种情形**：
 
@@ -89,11 +89,11 @@ $$
 
 原决策树为：
 
-![屏幕快照 2018-03-04 14.35.45](../../../../../Downloads/屏幕快照 2018-03-04 14.35.45.png)
+![屏幕快照 2018-03-04 14.35.45](5/屏幕快照 2018-03-04 14.35.45.png)
 
 预剪枝后：
 
-![屏幕快照 2018-03-04 14.29.17](../../../../../Downloads/屏幕快照 2018-03-04 14.29.17.png)
+![屏幕快照 2018-03-04 14.29.17](5/屏幕快照 2018-03-04 14.29.17.png)
 
 **优点**：预剪枝不仅降低了过拟合的风险，还显著减少了决策树的训练时间开销和测试时间开销。
 
@@ -103,7 +103,7 @@ $$
 
 已知原决策树的验证集精度为0.429。考虑节点6，若将其分支剪除，则节点6 变成叶节点后的类别标记为“好瓜”，此时验证集精度提升至0.571，于是后剪枝策略确定进行剪枝。然后再依次考察节点5，2，3 和1，最终得到结果：
 
-![屏幕快照 2018-03-04 14.39.43](../../../../../Downloads/屏幕快照 2018-03-04 14.39.43.png)
+![屏幕快照 2018-03-04 14.39.43](5/屏幕快照 2018-03-04 14.39.43.png)
 
 最终的精度为0.714。
 
@@ -175,15 +175,15 @@ $$
 
 **缺点**：对数据集的*旋转*较为敏感。（**解决**：PCA。）
 
-![屏幕快照 2018-03-04 15.47.22](../../../../../Downloads/屏幕快照 2018-03-04 15.47.22.png)
+![屏幕快照 2018-03-04 15.47.22](5/屏幕快照 2018-03-04 15.47.22.png)
 
 *多变量决策树* (multivariate decision tree) 中，非叶节点不再仅对某个属性，而是对属性的**线性组合**进行测试，即每个非叶节点是一个$\sum_{i=1}^d \omega_i a_i=t$ 的线性分类器，其中w~i~ 为属性a~i~ 的权重。w~i~ 和t 可在**该节点所含的样本集和属性集**上习得。
 
 在多变量决策树的学习过程中，不是为每个非叶结点寻找一个最优划分属性，而是试图建立一个合适的线性分类器。
 
-![屏幕快照 2018-03-04 16.24.15](../../../../../Downloads/屏幕快照 2018-03-04 16.24.15.png)
+![屏幕快照 2018-03-04 16.24.15](5/屏幕快照 2018-03-04 16.24.15.png)
 
-![屏幕快照 2018-03-04 16.24.32](../../../../../Downloads/屏幕快照 2018-03-04 16.24.32.png)
+![屏幕快照 2018-03-04 16.24.32](5/屏幕快照 2018-03-04 16.24.32.png)
 
 最后，决策树还对**数据集的微小变化**十分敏感。例如，对数据集一些极值的增减可以得到十分不同的决策树。（使用随机森林可以减轻决策树的这些缺点。）
 
@@ -191,7 +191,7 @@ $$
 
 决策树也可以用来做回归任务。和分类任务不同的是，回归决策树的叶子结点为输入数据给出一个预测值。通常，这个预测值就是该叶子结点做包含的样本数据的均值（和方差）。
 
-![tree_regression_plot](../../../../../Downloads/tree_regression_plot.png)
+![tree_regression_plot](5/tree_regression_plot.png)
 
 回归决策树以最小化每个结点的MSE 来划分训练数据，即其试图让训练数据尽可能地靠近预测值。其**代价函数**为：
 $$
