--- a/MachineLearning/6集成学习.md
+++ b/MachineLearning/6集成学习.md
@@ -201,3 +201,37 @@ $$
 **解决**：采用*交叉验证*获*留一法*，用未被初级学习器使用的样本来产生次级学习器的训练样本。
 
 次级学习器的**输入属性表示**和**次级学习算法**对Stacking 集成的泛化性能都有很大影响。**贝叶斯模型平均** (Baues Model Averaging, RMA) 基于后验概率来为不同模型赋予权重，可以视为加权平均法的一种特殊实现。
+
+## 多样性
+
+### 误差-分歧分解
+
+假定我们用个体学习器h1, h2, …, hT 通过加权平均法（式(18)）结合产生的集成来完成回归学习任务f。对于示例x，定义学习器hi 的**分歧** (ambiguity) 为
+$$
+A(h_i|\mathbf{x}) = (h_i(\mathbf{x}) - H(\mathbf{x}))^2
+$$
+则集成的*分歧*是
+$$
+\bar A(h | \mathbf{x})
+= \sum_{i=1}^T \omega_i A(h_i | \mathbf{x})
+= \sum_{i=1}^T \omega_i ( h_i (\mathbf{x}) - H(\mathbf{x}) )^2
+$$
+显然，分歧表征来个体学习器在样本x 上的不一致性，即在一定程度上反映了个体学习器的**多样性**。
+
+个体学习器hi 和集成H 的平方误差分别为：
+$$
+\begin{align}
+E(h_i | \mathbf{x}) & = (f(\mathbf{x}) - h_i (\mathbf{x}))^2 \\
+E(H | \mathbf{x}) & = (f(\mathbf{x}) - H(\mathbf{x}))^2
+\end{align}
+$$
+令$\bar E (h | \mathbf{x}) = \sum_{i=1}^T \omega_i E(h_i | \mathbf{x})$ 表示个体学习器误差的加权平均，则有
+$$
+\bar A (h | \mathbf{x}) = \sum_{i=1}^T \omega_i E(h_i | \mathbf{x}) - E(H | \mathbf{x}) \\
+= \bar E (h | \mathbf{x}) - E(H | \mathbf{x})
+$$
+上式对所有样本x 均成立。令p(x) 表示样本的概率密度，则在全样本上有：
+$$
+\sum_{i=1}^T \omega_i \int A(h_i | \mathbf{x}) p(\mathbf{x})d\mathbf{x}
+= \sum_{i=1}^T \omega_i \int E(h_i | \mathbf{x}) p(\mathbf{x})d\mathbf{x} - \int E(H |\mathbf{x})p(\mathbf{x})d\mathbf{x}
+$$
